--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
   "name": "note-taker",
   "version": "1.0.0",
+  "keywords": [],
+  "description": "",
   "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1"
   },
-  "keywords": [],
-  "description": ""
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  }
 }
